--- a/projeto_netflix/index.html
+++ b/projeto_netflix/index.html
@@ -52,19 +52,19 @@
             <div class="billboard-links" >
             <a href="">
                 <span class="play"><i class="icon-play"></i>
-                   <span> Assisir </span>
+                    Assisir 
                 </span>
             </a>   
             
             <a href="">
                 <span class="plus-button"><i class="icon-plus"></i>
-                   <span> Adiconar à lista </span> 
+                    Adiconar à lista 
                 </span>
             </a>  
 
             <a href="">
                 <span class="info-button"><i class="icon-info-sign"></i>
-                   <span> Mais informações </span> 
+                   Mais informações 
                 </span>
             </a>  
         </div>
