--- a/projeto_netflix/index.html
+++ b/projeto_netflix/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -71,6 +73,17 @@
         
         </div>
     </section><!--destaque-->
+    <main> 
+    <div class="main-slide">
+        <img src="./images/banner.png" alt="banner1" >
+        <img src="./images/banner.png" alt="banner2" >
+        <img src="./images/banner.png" alt="banner3" >
+    </div>
+</main>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="./JS/slide.js"></script>
 
 </body>
 </html>
